// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pbehavior-filter-field Renders \`pbehavior-filter-field\` with custom props 1`] = `
<div
  class="flex"
>
  <button
    class="ml-0 btn-filter v-btn theme--light primary"
    type="button"
  >
    <div
      class="v-btn__content"
    >
      Edit filter
    </div>
  </button>
  <span
    class="v-tooltip v-tooltip--top"
  >
    <transition-stub
      name="slide-y-reverse-transition"
    />
    <button
      class="v-btn v-btn--icon theme--light"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light grey--text text--darken-1"
        >
          info
        </i>
      </div>
    </button>
  </span>
  <transition-stub
    name="fade-transition"
  >
    <div
      class="v-alert error"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light v-alert__icon"
      >
        warning
      </i>
      <div>
        
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`pbehavior-filter-field Renders \`pbehavior-filter-field\` with custom props 2`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span
    class="pre"
  >
    [
    [
        {
            "field": "test",
            "cond": {
                "value": "test-value",
                "type": "eq"
            }
        }
    ]
]
  </span>
</div>
`;

exports[`pbehavior-filter-field Renders \`pbehavior-filter-field\` with errors 1`] = `
<div
  class="flex"
>
  <button
    class="ml-0 btn-filter v-btn theme--light error"
    type="button"
  >
    <div
      class="v-btn__content"
    >
      Add filter
    </div>
  </button>
  <!---->
  <transition-stub
    name="fade-transition"
  >
    <div
      class="v-alert error"
      style=""
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light v-alert__icon"
      >
        warning
      </i>
      <div>
        The field is required
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`pbehavior-filter-field Renders \`pbehavior-filter-field\` with errors 2`] = `undefined`;

exports[`pbehavior-filter-field Renders \`pbehavior-filter-field\` with required props 1`] = `
<div
  class="flex"
>
  <button
    class="ml-0 btn-filter v-btn theme--light primary"
    type="button"
  >
    <div
      class="v-btn__content"
    >
      Add filter
    </div>
  </button>
  <!---->
  <transition-stub
    name="fade-transition"
  >
    <div
      class="v-alert error"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light v-alert__icon"
      >
        warning
      </i>
      <div>
        
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`pbehavior-filter-field Renders \`pbehavior-filter-field\` with required props 2`] = `undefined`;
